<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/MyToolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip_button"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:text="@string/tomorrow"
        android:textSize="16sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toEndOf="@+id/next_week_chip_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/next_week_chip_button"
        app:layout_constraintTop_toBottomOf="@+id/today_chip_button"
        app:layout_constraintVertical_bias="0.376" />

    <ImageView
        android:id="@+id/set_alarm_img"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_alarm_on_24"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@id/todo_et" />

    <TextView
        android:id="@+id/add_date_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="save"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/upload_todo_button"
        app:layout_constraintTop_toBottomOf="@id/upload_todo_button" />

    <TextView
        android:id="@+id/add_priority_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="priority"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/priority_todo_button"
        app:layout_constraintStart_toStartOf="@+id/priority_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="set date"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/today_calendar_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_calendar_button" />

    <com.google.android.material.chip.Chip
        android:id="@+id/today_chip_button"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/today"
        android:textSize="16sp"
        android:textStyle="italic"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipIcon="@drawable/ic_baseline_today_24"
        app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tomorrow_chip_button"
        app:layout_constraintTop_toBottomOf="@+id/due_date_text_view" />

    <EditText
        android:id="@+id/todo_et"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:maxLength="60"
        android:hint="@string/todo_et_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/divider_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/today_calendar_button"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_et"
        app:srcCompat="@drawable/ic_baseline_edit_calendar_24" />

    <ImageView
        android:id="@+id/upload_todo_button"
        android:layout_width="44dp"
        android:layout_height="51dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/priority_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/todo_et"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24" />

    <ImageView
        android:id="@+id/priority_todo_button"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/todo_et"
        app:srcCompat="@drawable/ic_baseline_emoji_flags_24" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority_todo_button">


        <RadioButton
            android:id="@+id/radio_btn_high_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C91917"
            android:text="@string/high_radio_priority" />

        <RadioButton
            android:id="@+id/medium_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#E88020"
            android:text="Medium" />

        <RadioButton
            android:id="@+id/low_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#BC47E7"
            android:text="Low" />

    </RadioGroup>


    <TextView
        android:id="@+id/due_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center_horizontal"
        android:text="@string/due_date_text_view_val"
        android:textColor="@color/divider_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button" />

    <com.google.android.material.chip.Chip
        android:id="@+id/next_week_chip_button"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:text="Next Week"
        android:textSize="16sp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:chipIcon="@drawable/ic_baseline_next_week_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip_button" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="336dp"
        android:layout_height="299dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_week_chip_button" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="today_chip_button,due_date_text_view,tomorrow_chip_button,next_week_chip_button,calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>